[package]
name = "valkey-module-macros"
version = "0.1.6"
authors = ["Dmitry Polyakovsky <dmitry.polyakovsky@oracle.com>"]
edition = "2021"
description = "A macros crate for valkeymodule-rs"
license = "BSD-3-Clause"
repository = "https://github.com/valkey-io/valkeymodule-rs"
keywords = ["valkey", "plugin"]
categories = ["database", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version="1.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_syn = "0.1.0"

[lib]
name = "valkey_module_macros"
path = "src/lib.rs"
proc-macro = true
